--- a/MvcOnlineTicariOtomasyon/Views/Fatura/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Fatura/Index.cshtml
@@ -13,9 +13,9 @@
         <th>Vergi Dairesi</th>
         <th>Tarih</th>
         <th>Saat</th>
-        <th>Toplam</th>
         <th>Teslim Eden</th>
         <th>Teslim Alan</th>
+        <th>Toplam</th>
         <th>Güncelle</th>
         <th>Detay</th>
     </tr>
@@ -28,16 +28,16 @@
             <td>@k.VergiDairesi</td>
             <td>@k.FaturaTarih</td>
             <td>@k.Saat</td>
-            <td>100</td>
             <td>@k.TeslimEden</td>
             <td>@k.TeslimAlan</td>
-            
-            <td><a href="/Departman/DepartmanGetir/@k.Faturaid" class="btn btn-warning">Güncelle</a></td>
-            <td><a href="/Departman/DepartmanDetay/@k.Faturaid" class="btn btn-success" style="background-color:cornflowerblue; color:black;">Detay</a></td>
+            <td>@k.Toplam</td>
+
+            <td><a href="/Fatura/FaturaGetir/@k.Faturaid" class="btn btn-warning">Güncelle</a></td>
+            <td><a href="/Fatura/FaturaDetay/@k.Faturaid" class="btn btn-success" style="background-color:cornflowerblue; color:black;">Detay</a></td>
         </tr>
     }
 
 </table>
 
-<a href="/Departman/DepartmanEkle" class="btn btn-info">Departman Ekle</a>
+<a href="/Fatura/FaturaEkle" class="btn btn-info">Yeni Fatura</a>
 
