--- a/MvcOnlineTicariOtomasyon/Views/Personel/PersonelGetir.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Personel/PersonelGetir.cshtml
@@ -5,7 +5,7 @@
 }
 
 <br />
-<h2>Cari Güncelleme Ekrani</h2>
+<h2>Personel Güncelleme Ekrani</h2>
 <br />
 @using (Html.BeginForm("PersonelGuncelle", "Personel", FormMethod.Post))
 {
