--- a/MvcOnlineTicariOtomasyon/Views/Shared/_AdminLayout.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Shared/_AdminLayout.cshtml
@@ -62,10 +62,16 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
                             Cariler
                         </a>
-                        <a class="nav-link" href="/Personel/Index">
+                        <a class="nav-link collapsed" href="/Personel/Index" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                             <div class="sb-nav-link-icon"><i class="fas fa-street-view"></i></div>
                             Personeller
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
+                        <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav"><a class="nav-link" href="/Personel/Index/">Personel Tablosu</a><a class="nav-link" href="/Personel/PersonelListe/">Personel Kartları</a></nav>
+                        </div>
+
+                        
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                             <div class="sb-nav-link-icon"><i class="fas fa-lock"></i></div>
                             Admin
