--- a/MvcOnlineTicariOtomasyon/Views/Personel/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Personel/Index.cshtml
@@ -23,7 +23,9 @@
             <td>@k.Personelid</td>
             <td>@k.PersonelAd</td>
             <td>@k.PersonelSoyad</td>
-            <td>@k.PersonelGorsel</td>
+            <td>
+                <img src="@k.PersonelGorsel" style="width:60px;height:50px"/>
+            </td>
             <td>@k.Departman.DepartmanAd</td>
             @*<td><a href="/Personel/PersonelSil/@k.Personelid" class="btn btn-danger">Sil</a></td>*@
             <td><a href="/Personel/PersonelGetir/@k.Personelid" class="btn btn-warning">Güncelle</a></td>
