pagedlist ile kategori sayfalama yapıldı. faturalar sayfası için temel popup kullanımı.

--- a/MvcOnlineTicariOtomasyon/Views/Departman/DepartmanPersonelSatis.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Departman/DepartmanPersonelSatis.cshtml
@@ -11,7 +11,7 @@
 </ol>
 <table class="table table-condensed">
     <tr>
-        <th>Satış Id</th>
+        @*<th>Satış Id</th>*@
         <th>Ürün</th>
         <th>Cari</th>
         <th>Fiyat</th>
@@ -23,12 +23,12 @@
     @foreach (var x in Model)
     {
         <tr>
-            <td>@x.Satisid</td>
+            @*<td>@x.Satisid</td>*@
             <td>@x.Urun.UrunAd</td>
             <td>@x.Cariler.CariAd @x.Cariler.CariSoyad</td>
-            <td>@x.Fiyat</td>
+            <td>@x.Fiyat ₺</td>
             <td>@x.Adet</td>
-            <td>@x.ToplamTutar</td>
+            <td>@x.ToplamTutar ₺</td>
             <td>@x.Tarih</td>
             <td><a href="#" class="btn btn-default" style="background-color:dodgerblue">Yazdır</a></td>
         </tr>
