--- a/MvcOnlineTicariOtomasyon/Views/Fatura/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Fatura/Index.cshtml
@@ -7,37 +7,74 @@
 
 <table class="table table-bordered" style="margin-top:20px">
     <tr>
-        <th>Id</th>
+        @*<th>Id</th>*@
         <th>Seri No</th>
         <th>Sıra No</th>
-        <th>Vergi Dairesi</th>
+        @*<th>Vergi Dairesi</th>*@
         <th>Tarih</th>
         <th>Saat</th>
-        <th>Teslim Eden</th>
-        <th>Teslim Alan</th>
+        @*<th>Teslim Eden</th>
+        <th>Teslim Alan</th>*@
         <th>Toplam</th>
         <th>Güncelle</th>
         <th>Detay</th>
+        @*<th>Popup liste</th>*@
+        <th>Yeni Kalem</th>
     </tr>
     @foreach (var k in Model)
     {
         <tr>
-            <td>@k.Faturaid</td>
+            @*<td>@k.Faturaid</td>*@
             <td>@k.FaturaSeriNo</td>
             <td>@k.FaturaSıraNo</td>
-            <td>@k.VergiDairesi</td>
+            @*<td>@k.VergiDairesi</td>*@
             <td>@k.FaturaTarih</td>
             <td>@k.Saat</td>
-            <td>@k.TeslimEden</td>
-            <td>@k.TeslimAlan</td>
+            @*<td>@k.TeslimEden</td>
+            <td>@k.TeslimAlan</td>*@
             <td>@k.Toplam</td>
 
             <td><a href="/Fatura/FaturaGetir/@k.Faturaid" class="btn btn-warning">Güncelle</a></td>
             <td><a href="/Fatura/FaturaDetay/@k.Faturaid" class="btn btn-success" style="background-color:cornflowerblue; color:black;">Detay</a></td>
+            @*<td><a href="/Fatura/FaturaDetay/@k.Faturaid" class="btn btn-success" style="background-color:dodgerblue; color:black;">Popup</a></td>*@
+            <td><a href="/Fatura/FaturaDetay/@k.Faturaid" class="btn btn-success" style="background-color:thistle; color:black;">Kalem</a></td>
         </tr>
     }
 
 </table>
 
 <a href="/Fatura/FaturaEkle" class="btn btn-info">Yeni Fatura</a>
+<br />
+<br />
+<button type="button" class="btn btn-warning" style="background-color:#d95151;color:white" data-toggle="modal" data-target="#Modal1">Popup Penceresi</button>
+
+<div class="modal" id="Modal1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Popup Dialog Ekranı</h2>
+            </div>
+            <div class="modal-body">
+                <table class="table table-bordered">
+                    <tr>
+                        <td>Seri No</td>
+                        <td>Sıra No</td>
+                        <td>Tutar</td>
+                    </tr>
+                    @foreach(var x in Model)
+                     {
+                        <tr>
+
+                            <td>@x.FaturaSeriNo</td>
+                            <td>@x.FaturaSıraNo</td>
+                            <td>@x.Toplam</td>
+                        </tr>
+                     }
+                    
+                </table>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Tamam</button>
+            </div>
+        </div>
+    </div>
+</div>
 
