--- a/MvcOnlineTicariOtomasyon/Views/Departman/DepartmanDetay.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Departman/DepartmanDetay.cshtml
@@ -13,19 +13,19 @@
 
 <table class="table table-hover">
     <tr>
-        <th>Personel Id</th>
+        @*<th>Personel Id</th>*@
         <th>Ad</th>
         <th>Soyad</th>
-        <th>Görsel</th>
+        @*<th>Görsel</th>*@
         <th>Satışlar</th>
     </tr>
     @foreach (var x in Model)
     {
         <tr>
-            <td>@x.Personelid</td>
+            @*<td>@x.Personelid</td>*@
             <td>@x.PersonelAd</td>
             <td>@x.PersonelSoyad</td>
-            <td>@x.PersonelGorsel</td>
+            @*<td>@x.PersonelGorsel</td>*@
             <td><a href="/departman/DepartmanPersonelSatis/@x.Personelid" class="btn btn-default" style="background-color:orangered">Satışlar</a></td>
         </tr>
     }
