--- a/MvcOnlineTicariOtomasyon/Views/Kategori/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Kategori/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@using MvcOnlineTicariOtomasyon.Models.Siniflar
-@model List<Kategori>
+@using PagedList
+@using PagedList.Mvc
+@model PagedList.IPagedList<Kategori>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -7,7 +9,7 @@
 
 <table class="table table-bordered" style="margin-top:20px">
     <tr>
-        <th>Id</th>
+        @*<th>Id</th>*@
         <th>Kategori Adı</th>
         <th>Sil</th>
         <th>Güncelle</th>
@@ -15,7 +17,7 @@
     @foreach (var k in Model)
     {
         <tr>
-            <td>@k.KategoriID</td>
+            @*<td>@k.KategoriID</td>*@
             <td>@k.KategoriAd</td>
             <td><a href="/Kategori/KategoriSil/@k.KategoriID" class="btn btn-danger">Sil</a></td>
             <td><a href="/Kategori/KategoriGetir/@k.KategoriID" class="btn btn-success">Güncelle</a></td>
@@ -23,4 +25,12 @@
     }
 
 </table>
+@Html.PagedListPager((IPagedList)Model,sayfa => Url.Action("Index", new { sayfa}), new PagedListRenderOptions
+
+{
+
+    LiElementClasses = new string[] { "page-link" }
+    
+
+})
 <a href="/Kategori/KategoriEkle" class="btn btn-primary">Kategori Ekle</a>
