--- a/MvcOnlineTicariOtomasyon/Views/Urun/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Urun/Index.cshtml
@@ -5,32 +5,41 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
+<br />
+@using (Html.BeginForm("Index", "Urun", FormMethod.Get))
+{
+    <p>
+        Ürün Adı: @Html.TextBox("p")
+        <input type="submit" value="Ara" />
+    </p>
+}
+<br />
 
 <table class="table table-bordered">
     <tr>
-        <th>ID</th>
+        @*<th>ID</th>*@
         <th>Ürün</th>
         <th>Marka</th>
         <th>Stok</th>
         <th>Alış Fiyatı</th>
         <th>Satış Fiyatı</th>
         <th>Kategori</th>
-        <th>Görsel</th>
+        @*<th>Görsel</th>*@
         <th>Sil</th>
         <th>Güncelle</th>
     </tr>
     @foreach (var u in Model)
     {
-        
+
         <tr>
-            <td>@u.Urunid</td>
+            @*<td>@u.Urunid</td>*@
             <td>@u.UrunAd</td>
             <td>@u.Marka</td>
             <td>@u.Stok</td>
-            <td>@u.AlisFiyat</td>
-            <td>@u.SatisFiyat</td>
+            <td>@u.AlisFiyat ₺</td>
+            <td>@u.SatisFiyat ₺</td>
             <td>@u.Kategori.KategoriAd</td>
-            <td>@u.UrunGorsel</td>
+            @*<td>@u.UrunGorsel</td>*@
             <td>
                 <a href="/Urun/UrunSil/@u.Urunid" class="btn btn-danger">Sil</a>
             </td>
