--- a/MvcOnlineTicariOtomasyon/Views/Personel/PersonelGetir.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Personel/PersonelGetir.cshtml
@@ -7,7 +7,7 @@
 <br />
 <h2>Personel Güncelleme Ekrani</h2>
 <br />
-@using (Html.BeginForm("PersonelGuncelle", "Personel", FormMethod.Post))
+@using (Html.BeginForm("PersonelGuncelle", "Personel", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <div class="form-group">
         @Html.HiddenFor(x => x.Personelid)
@@ -20,7 +20,8 @@
         @Html.ValidationMessageFor(x => x.PersonelSoyad, "", new { @style = "color:orange" })
         <br />
         @Html.LabelFor(x => x.PersonelGorsel)
-        @Html.TextBoxFor(x => x.PersonelGorsel, new { @class = "form-control" })
+        @*@Html.TextBoxFor(x => x.PersonelGorsel, new { @class = "form-control" })*@
+        <input type="file" name="PersonelGorsel" />
         <br />
         @Html.LabelFor(x => x.Departman)
         @Html.DropDownListFor(x => x.Departmanid, (List<SelectListItem>)ViewBag.dgr1, new { @class = "form-control" })
