temel alert ve sweetalert işlemleri

--- a/MvcOnlineTicariOtomasyon/Views/Shared/_AdminLayout.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Shared/_AdminLayout.cshtml
@@ -71,7 +71,7 @@
                             <nav class="sb-sidenav-menu-nested nav"><a class="nav-link" href="/Personel/Index/">Personel Tablosu</a><a class="nav-link" href="/Personel/PersonelListe/">Personel Kartları</a></nav>
                         </div>
 
-                        
+
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                             <div class="sb-nav-link-icon"><i class="fas fa-lock"></i></div>
                             Admin
@@ -112,6 +112,10 @@
                         <a class="nav-link" href="/Urun/UrunListesi">
                             <div class="sb-nav-link-icon"><i class="fas fa-print"></i></div>
                             Pdf ~ Excel
+                        </a>
+                        <a class="nav-link" href="/Alertler/Index/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-box"></i></div>
+                            Alertler
                         </a>
                         <a class="nav-link" href="/Istatistik/Index/">
                             <div class="sb-nav-link-icon"><i class="fas fa-database"></i></div>
