ürünler sayfasında satış

--- a/MvcOnlineTicariOtomasyon/Views/Satis/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Satis/Index.cshtml
@@ -43,15 +43,15 @@
 
 </table>
 <br />
-<a href="/Satis/YeniSatis" class="btn btn-info">Yeni Satış Yap</a>
+@*<a href="/Satis/YeniSatis" class="btn btn-info">Yeni Satış Yap</a>*@
 
 
 
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
+@*<link href="~/Content/bootstrap.css" rel="stylesheet" />*@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet" />
+@*<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet" />*@
 
 <link href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" rel="stylesheet" />
 
