--- a/MvcOnlineTicariOtomasyon/Views/Urun/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Urun/Index.cshtml
@@ -27,6 +27,7 @@
         @*<th>Görsel</th>*@
         <th>Sil</th>
         <th>Güncelle</th>
+        <th>Satış Yap</th>
     </tr>
     @foreach (var u in Model)
     {
@@ -45,6 +46,9 @@
             </td>
             <td>
                 <a href="/Urun/UrunGetir/@u.Urunid" class="btn btn-success">Güncelle</a>
+            </td>
+            <td>
+                <a href="/Urun/SatisYap/@u.Urunid" class="btn btn-default" style="background-color:burlywood">Satış Yap</a>
             </td>
 
 
