--- a/MvcOnlineTicariOtomasyon/Views/CariPanel/CariKargoTakip.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/CariPanel/CariKargoTakip.cshtml
@@ -1,14 +1,15 @@
 ﻿@using MvcOnlineTicariOtomasyon.Models.Siniflar
 @model List<KargoTakip>
+
 @{
-    ViewBag.Title = "KargoTakip";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewBag.Title = "CariKargoTakip";
+    Layout = "~/Views/Shared/_CariLayout.cshtml";
 }
+
 
 <br />
 <table class="table table-striped">
     <tr>
-       
         <th>Açıklama</th>
         <th>Tarih</th>
     </tr>
@@ -17,7 +18,7 @@
         <tr>
             <td>@x.Aciklama</td>
             <td>@x.Tarih</td>
-           
         </tr>
     }
 </table>
+
