--- a/MvcOnlineTicariOtomasyon/Views/Login/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Login/Index.cshtml
@@ -42,13 +42,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <section class="register">
         <div class="header">
             <div class="logo">
-                <a href="#">Login Form</a>
+                <a href="#">Gİrİş Formu</a>
             </div>
             <div class="social">
-                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+                <li><a href="https://www.linkedin.com/in/aliberkaygedikoglu/"><span class="fa fa-linkedin"></span></a></li>
+                <li><a href="https://github.com/aliberkaygdk"><span class="fa fa-github"></span></a></li>
+                @*<li><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                <li><a href="#"><span class="fa fa-google-plus"></span></a></li>*@
             </div>
             <div class="clear"></div>
         </div>
@@ -86,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="clear"> </div>
         </div>
         <!-- copyright -->
-        <p class="agile-copyright">© 2024 Project. Tüm Hakları Saklıdır | Design by <a href="https://w3layouts.com/" target="_blank">W3layouts</a></p>
+        <p class="agile-copyright">© 2024 Project. Tüm Hakları Saklıdır | Design by <a href="https://github.com/aliberkaygdk" target="_blank">aliberkaygdk</a></p>
         <!-- //copyright -->
     </section>
     <!-- //section -->
